# esp32_c3

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
core/: CMakeLists.txt  partition_table.csv
core/Inc/: main.h  my_warnings.h
core/Src/: heap.cpp  main.cpp
